fixing overflow-x 1

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,9 @@
   box-sizing: border-box;
   transition: all 0.25s ease-in;
 }
+html, body {
+  overflow-x: hidden;
+}
 ::-webkit-scrollbar {
   width: 10px;
 }
